--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@
 div.dokuwiki ul.medialist {
   list-style: none;
   margin-left: 0;
-} 
+}
+div.dokuwiki ul.medialist a.linked {
+  font-weight: bold;
+}
 div.dokuwiki ul.medialist span.mediainfo {
   font-size: 90%;
 }
